[build-system]
requires = ["setuptools>=61", "wheel", "numpy"]
build-backend = "setuptools.build_meta"


[project]
name = "space_phot"
version = "0.3.8"
description = "Aperture and PSF photometry tools for HST and JWST data."
authors = [
    { name = "Justin Pierel", email = "jpierel@stsci.edu" }
]
license = { text = "" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",

  "astropy>=5.2",
  "photutils>=1.9",

  "matplotlib>=3.7",

  "sncosmo>=2.10",
  "dynesty>=2.1",
  "dill>=0.3.6",
  "corner>=2.2",

  "stpsf>=2.0",
  "poppy>=1.1",

  "stsci.skypac>=1.0",

  "jwst>=1.12",
  "stdatamodels>=1.9",
  "stpipe>=0.5",
  "gwcs>=0.20",
  "asdf>=2.15"]


[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]


docs = [
  "sphinx>=7",
  "sphinx-rtd-theme",
  "sphinx-gallery",
  "numpydoc",
  "matplotlib",
  "sphinx-exec-code"
]


dev = [
  "ruff>=0.5",
  "black>=24.3",
  "isort>=5.13",
  "pre-commit>=3.7",
]


[project.urls]
Homepage = "https://space-phot.readthedocs.io/en/latest/"

[tool.setuptools]
packages = ["space_phot"]  # Ensure this matches the actual package structure

[tool.setuptools.dynamic]
# This section can be used if additional files (like data files) are needed

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

