[build-system]
requires = ["setuptools>=61", "wheel", "numpy"]
build-backend = "setuptools.build_meta"


[project]
name = "space_phot"
version = "0.4.0"
description = "Aperture and PSF photometry tools for HST and JWST data."
authors = [
  { name = "Justin Pierel", email = "jpierel@stsci.edu" }
]
license = { text = "" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "astropy>=7.1.1",
  "photutils>=2.3",
  "matplotlib>=3.7",
  "sncosmo>=2.12.1",
  "dynesty>=3.0.0",
  "dill>=0.3.6",
  "corner>=2.2",
  "stpsf>=2.1",
  "poppy>=1.1.2",
  "stsci.skypac>=1.0.11",
  # JWST stack (only keep these if importing them at runtime)
  "jwst>=1.20",
  "stdatamodels>=4.1.0",
  "stpipe>=0.11.0",
  "gwcs>=0.26.1",
  "asdf>=4.5.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

docs = [
  "sphinx>=7",
  "sphinx-rtd-theme",
  "sphinx-gallery",
  "numpydoc",
  "sphinx-exec-code",
  # If examples / docs import these, include them here too:
  "astroquery",
]

dev = [
  "ruff>=0.5",
  "black>=24.3",
  "isort>=5.13",
  "pre-commit>=3.7",
]



[project.urls]
Homepage = "https://space-phot.readthedocs.io/en/latest/"

[tool.setuptools]
packages = ["space_phot"]  # Ensure this matches the actual package structure

[tool.setuptools.dynamic]
# This section can be used if additional files (like data files) are needed

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

